# autosilica-instrument-platform

./: .env.example  Cargo.toml  README.md  update.patch
app/: Cargo.toml
app/src/: main.rs
config/: default.toml
crates/api/: Cargo.toml
crates/api/src/: error_response.rs  lib.rs  state.rs
crates/api/src/handlers/: connection_handler.rs  discovery_handler.rs  instrument_handler.rs  mod.rs
crates/api/src/middleware/: mod.rs  request_id.rs
crates/api/src/routes/: connections.rs  discovery.rs  health.rs  instruments.rs  mod.rs
crates/application/: Cargo.toml
crates/application/src/: errors.rs  lib.rs
crates/application/src/dto/: connection_dto.rs  discovery_dto.rs  instrument_dto.rs  mod.rs
crates/application/src/use_cases/: mod.rs
crates/application/src/use_cases/connection/: connect_instrument.rs  disconnect_instrument.rs  list_connections.rs  mod.rs
crates/application/src/use_cases/discovery/: discover_instruments.rs  mod.rs
crates/application/src/use_cases/instrument/: get_instrument.rs  list_instruments.rs  mod.rs  register_instrument.rs
crates/domain/: Cargo.toml
crates/domain/src/: errors.rs  lib.rs
crates/domain/src/connection/: connection.rs  mod.rs  port.rs
crates/domain/src/discovery/: discovered_instrument.rs  mod.rs  port.rs
crates/domain/src/entities/: instrument.rs  mod.rs
crates/domain/src/repositories/: instrument_repository.rs  mod.rs
crates/domain/src/value_objects/: instrument_id.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: errors.rs  lib.rs
crates/infrastructure/src/config/: mod.rs  settings.rs
crates/infrastructure/src/logging/: mod.rs  tracing_setup.rs
crates/infrastructure/src/persistence/: in_memory_instrument_repository.rs  mod.rs
crates/infrastructure/src/visa/: bindings.rs  connection_backend.rs  discovery_backend.rs  idn.rs  library.rs  mod.rs  session.rs
tests/: README.md
